--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/playing-cards.png" />
+    <link rel="icon" href="%PUBLIC_URL%/cards.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="21 BlackJack"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/playing-cards.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cards.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
